# sentinel-protocol

./: .gitignore  CHECKLIST.md  DOCUMENTATION.md  EXECUTIVE_SUMMARY.md  INTEGRATION_GUIDE.md  NEXT_STEPS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SPRINT_PLAN_36H.md  SYSTEM_OVERVIEW.md  demo.sh  test_will.txt
.claude/: settings.local.json
contract/: Move.toml  Published.toml  README.md
docs/: ARCHITECTURE.md  BENCHMARK.md  DEMO_RUNBOOK.md  PITCH_3MIN.md  README.md  ROADMAP.md  SECURITY_WORKFLOWS.md  SUBMISSION.md  USAGE.md  VERIFICATION.md
goserver/: ALERT_DEMO.md  DEEPBOOK_INTEGRATION.md  README.md  README_ENHANCED.md  activity_monitor.go  alert_system.go  behavioral_detection.go  behavioral_detection_test.go  config.deepbook.json  config.enhanced.json  config.example.json  config.go  config.openclaw.example.json  config.openclaw.json  deepbook_integration.go  go.mod  go.sum  main.go  main_enhanced.go  openclaw_client.go  openclaw_integration.go  policy_gate_integration_example.go  sentinel_anchor_failclosed_test.go  sentinel_approval.go  sentinel_benchmark.go  sentinel_benchmark_test.go  sentinel_controls.go  sentinel_eval_mode_test.go  sentinel_executor.go  sentinel_gateway.go  sentinel_gateway_http.go  sentinel_gateway_test.go  sentinel_guard.go  sentinel_oneclick_mode_test.go  sentinel_proof.go
openclaw-plugin/: index.ts  openclaw.plugin.json  package-lock.json  package.json
rustcli/: Cargo.toml  README.md
rustcli/src/: main.rs
scripts/: build_judge_evidence.sh  demo_live.sh  demo_video.sh  propose_wallet_tx.sh  run_hackathon_benchmark.sh  (+2 more)
(+31 files in other folders)
