[package]
name = "lazarus-vault"
version = "0.1.0"
edition = "2021"
authors = ["Sentinel Protocol Team"]
description = "Zero-knowledge encryption tool for the Sentinel Protocol on Sui"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
aes-gcm = "0.10"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
tokio = { version = "1.40", features = ["full"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
